fix(a11y): ensure proper spacing in version select button content

--- a/_shared_assets/static/custom.css
+++ b/_shared_assets/static/custom.css
@@ -69,6 +69,12 @@ button.rst-current-version {
 }
 .rst-versions .rst-current-version .fa-caret-down {
 	margin-left: 5px;
+.rst-versions .rst-current-version .fa-caret-down {
+	margin-left: 5px;
+}
+
+.rst-versions .rst-current-version .fa-caret-down:not(:last-of-type) {
+	margin-right: 10px;
 }
 
 /* Code blocks */
